[gd_scene load_steps=6 format=3 uid="uid://bnld4t4pen4hm"]

[ext_resource type="Script" uid="uid://bjgnvmuhdu37k" path="res://Mods/GraphicsTablet/GraphicsTablet.gd" id="1_tq632"]
[ext_resource type="PackedScene" uid="uid://dew1tbtd0nbce" path="res://Mods/GraphicsTablet/Models/Tablet/tablet.glb" id="2_2rf4b"]
[ext_resource type="PackedScene" uid="uid://ld4jdeacqx3x" path="res://Mods/GraphicsTablet/Models/Pen/pen.glb" id="3_dexwa"]

[sub_resource type="CylinderMesh" id="CylinderMesh_2rf4b"]
top_radius = 0.01
bottom_radius = 0.01
height = 0.15

[sub_resource type="SphereMesh" id="SphereMesh_tq632"]
radius = 0.01
height = 0.02

[node name="GraphicsTablet" type="Node"]
script = ExtResource("1_tq632")
metadata/_custom_type_script = "uid://bsjotf2wtnmeq"

[node name="Tablet" type="MeshInstance3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707106, 0, -0.707107, 0.707106, -0.029323, 1.2756, -0.387511)

[node name="tablet" parent="Tablet" instance=ExtResource("2_2rf4b")]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74227e-08, 0, -1, 0, 0, 0)

[node name="Pen_Transform" type="Node3D" parent="Tablet"]
unique_name_in_owner = true

[node name="pen" parent="Tablet/Pen_Transform" instance=ExtResource("3_dexwa")]
transform = Transform3D(-1.54, 1.00474e-07, 2.09706e-07, 0, 1.38882, -0.665412, -2.32533e-07, -0.665412, -1.38882, 0.0140497, 0.00687373, 0.0288948)

[node name="Pen" type="MeshInstance3D" parent="Tablet/Pen_Transform"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 0.901802, 0.432149, 0, -0.432149, 0.901803, 0, 0.0976307, -0.0113033)
visible = false
mesh = SubResource("CylinderMesh_2rf4b")
skeleton = NodePath("../..")

[node name="Hand" type="Node3D" parent="Tablet/Pen_Transform"]
unique_name_in_owner = true
transform = Transform3D(-0.125481, -0.713835, 0.688981, 0.221133, 0.656874, 0.720844, -0.967139, 0.242808, 0.0754271, -0.0523542, 0.0871247, -0.106915)

[node name="wrist" type="MeshInstance3D" parent="Tablet/Pen_Transform/Hand"]
transform = Transform3D(-0.125481, -0.372928, -0.919336, -0.713835, 0.677476, -0.177386, 0.68898, 0.633996, -0.351219, 0.0699557, 0.202337, 0.19702)
visible = false
mesh = SubResource("SphereMesh_tq632")
skeleton = NodePath("../../Pen")

[node name="hand_right" type="MeshInstance3D" parent="Tablet/Pen_Transform/Hand"]
transform = Transform3D(0.919336, 0.125481, -0.372928, 0.177386, 0.713835, 0.677476, 0.351219, -0.688981, 0.633995, 0.069501, 0.196535, 0.202583)
visible = false
mesh = SubResource("SphereMesh_tq632")
skeleton = NodePath("../../Pen")

[node name="thumb_cmc" type="MeshInstance3D" parent="Tablet/Pen_Transform/Hand"]
transform = Transform3D(-0.125481, 0.0423073, -0.991193, -0.713835, 0.689988, 0.119819, 0.68898, 0.722584, -0.0563796, 0.05344, 0.191871, 0.248642)
visible = false
mesh = SubResource("SphereMesh_tq632")
skeleton = NodePath("../../Pen")

[node name="thumb_mcp" type="MeshInstance3D" parent="Tablet/Pen_Transform/Hand"]
transform = Transform3D(-0.606956, 0.0423073, -0.793608, -0.556726, 0.689986, 0.462571, 0.567148, 0.722582, -0.395239, -0.00106132, 0.161066, 0.305275)
visible = false
mesh = SubResource("SphereMesh_tq632")
skeleton = NodePath("../../Pen")

[node name="thumb_ip" type="MeshInstance3D" parent="Tablet/Pen_Transform/Hand"]
transform = Transform3D(-0.125481, 0.0423073, -0.991194, -0.713835, 0.689986, 0.119819, 0.68898, 0.722582, -0.0563796, -0.0209717, 0.150865, 0.300043)
visible = false
mesh = SubResource("SphereMesh_tq632")
skeleton = NodePath("../../Pen")

[node name="thumb_tip" type="MeshInstance3D" parent="Tablet/Pen_Transform/Hand"]
transform = Transform3D(-0.125481, 0.0423073, -0.991194, -0.713835, 0.689986, 0.119819, 0.68898, 0.722582, -0.0563796, -0.0697569, 0.133245, 0.318864)
visible = false
mesh = SubResource("SphereMesh_tq632")
skeleton = NodePath("../../Pen")

[node name="index_finger_mcp" type="MeshInstance3D" parent="Tablet/Pen_Transform/Hand"]
transform = Transform3D(-0.125481, 0.0423073, -0.991193, -0.713835, 0.689988, 0.119819, 0.68898, 0.722584, -0.0563796, -0.0186684, 0.230277, 0.185883)
visible = false
mesh = SubResource("SphereMesh_tq632")
skeleton = NodePath("../../Pen")

[node name="index_finger_pip" type="MeshInstance3D" parent="Tablet/Pen_Transform/Hand"]
transform = Transform3D(-0.125481, 0.0423073, -0.991194, -0.713835, 0.689987, 0.119819, 0.68898, 0.722583, -0.0563796, -0.0800361, 0.200216, 0.181293)
visible = false
mesh = SubResource("SphereMesh_tq632")
skeleton = NodePath("../../Pen")

[node name="index_finger_dip" type="MeshInstance3D" parent="Tablet/Pen_Transform/Hand"]
transform = Transform3D(-0.125481, 0.0423073, -0.991194, -0.713835, 0.689984, 0.119819, 0.68898, 0.72258, -0.0563796, -0.11549, 0.193618, 0.188866)
visible = false
mesh = SubResource("SphereMesh_tq632")
skeleton = NodePath("../../Pen")

[node name="index_finger_tip" type="MeshInstance3D" parent="Tablet/Pen_Transform/Hand"]
transform = Transform3D(-0.125481, 0.0423073, -0.991194, -0.713835, 0.689984, 0.119819, 0.68898, 0.72258, -0.0563796, -0.151569, 0.173785, 0.196685)
visible = false
mesh = SubResource("SphereMesh_tq632")
skeleton = NodePath("../../Pen")

[node name="middle_finger_mcp" type="MeshInstance3D" parent="Tablet/Pen_Transform/Hand"]
transform = Transform3D(-0.125481, -0.145818, -0.981322, -0.713835, 0.700198, -0.0127672, 0.68898, 0.6989, -0.191951, -0.0321189, 0.216756, 0.169426)
visible = false
mesh = SubResource("SphereMesh_tq632")
skeleton = NodePath("../../Pen")

[node name="middle_finger_pip" type="MeshInstance3D" parent="Tablet/Pen_Transform/Hand"]
transform = Transform3D(-0.125481, -0.145818, -0.981322, -0.713835, 0.700198, -0.0127672, 0.68898, 0.6989, -0.191951, -0.0608511, 0.1963, 0.164658)
visible = false
mesh = SubResource("SphereMesh_tq632")
skeleton = NodePath("../../Pen")

[node name="middle_finger_dip" type="MeshInstance3D" parent="Tablet/Pen_Transform/Hand"]
transform = Transform3D(-0.125481, -0.145818, -0.981322, -0.713835, 0.700198, -0.0127672, 0.68898, 0.6989, -0.191951, -0.0575942, 0.177608, 0.192297)
visible = false
mesh = SubResource("SphereMesh_tq632")
skeleton = NodePath("../../Pen")

[node name="middle_finger_tip" type="MeshInstance3D" parent="Tablet/Pen_Transform/Hand"]
transform = Transform3D(-0.125481, -0.145818, -0.981322, -0.713835, 0.700198, -0.0127672, 0.68898, 0.6989, -0.191951, -0.0434229, 0.168022, 0.204015)
visible = false
mesh = SubResource("SphereMesh_tq632")
skeleton = NodePath("../../Pen")

[node name="ring_finger_mcp" type="MeshInstance3D" parent="Tablet/Pen_Transform/Hand"]
transform = Transform3D(-0.125481, -0.145818, -0.981322, -0.713835, 0.700198, -0.0127672, 0.68898, 0.6989, -0.191951, -0.0194716, 0.197766, 0.152053)
visible = false
mesh = SubResource("SphereMesh_tq632")
skeleton = NodePath("../../Pen")

[node name="ring_finger_pip" type="MeshInstance3D" parent="Tablet/Pen_Transform/Hand"]
transform = Transform3D(-0.125481, -0.145818, -0.981322, -0.713835, 0.700198, -0.0127672, 0.68898, 0.6989, -0.191951, -0.0482038, 0.177309, 0.147286)
visible = false
mesh = SubResource("SphereMesh_tq632")
skeleton = NodePath("../../Pen")

[node name="ring_finger_dip" type="MeshInstance3D" parent="Tablet/Pen_Transform/Hand"]
transform = Transform3D(-0.125481, -0.145818, -0.981322, -0.713835, 0.700198, -0.0127672, 0.68898, 0.6989, -0.191951, -0.044947, 0.158617, 0.174925)
visible = false
mesh = SubResource("SphereMesh_tq632")
skeleton = NodePath("../../Pen")

[node name="ring_finger_tip" type="MeshInstance3D" parent="Tablet/Pen_Transform/Hand"]
transform = Transform3D(-0.125481, -0.145818, -0.981322, -0.713835, 0.700198, -0.0127672, 0.68898, 0.6989, -0.191951, -0.0298676, 0.154198, 0.181657)
visible = false
mesh = SubResource("SphereMesh_tq632")
skeleton = NodePath("../../Pen")

[node name="pinky_finger_mcp" type="MeshInstance3D" parent="Tablet/Pen_Transform/Hand"]
transform = Transform3D(0.742266, 0.375846, -0.55478, -0.39858, -0.417899, -0.816392, -0.538679, 0.827105, -0.160388, -0.0203637, 0.204336, 0.138341)
visible = false
mesh = SubResource("SphereMesh_tq632")
skeleton = NodePath("../../Pen")

[node name="pinky_finger_pip" type="MeshInstance3D" parent="Tablet/Pen_Transform/Hand"]
transform = Transform3D(0.742266, 0.375846, -0.55478, -0.39858, -0.417899, -0.816392, -0.538679, 0.827105, -0.160388, -0.0447898, 0.188123, 0.137718)
visible = false
mesh = SubResource("SphereMesh_tq632")
skeleton = NodePath("../../Pen")

[node name="pinky_finger_dip" type="MeshInstance3D" parent="Tablet/Pen_Transform/Hand"]
transform = Transform3D(0.74352, 0.376218, -0.552845, -0.396242, -0.418098, -0.817427, -0.538674, 0.826835, -0.161791, -0.0559778, 0.174359, 0.130603)
visible = false
mesh = SubResource("SphereMesh_tq632")
skeleton = NodePath("../../Pen")

[node name="pinky_finger_tip" type="MeshInstance3D" parent="Tablet/Pen_Transform/Hand"]
transform = Transform3D(0.742266, 0.375846, -0.55478, -0.39858, -0.417899, -0.816392, -0.538679, 0.827105, -0.160388, -0.0336793, 0.138357, 0.111745)
visible = false
mesh = SubResource("SphereMesh_tq632")
skeleton = NodePath("../../Pen")
